fix: correct alignment between top and bottom
fixes elements on header and section-2 so that
they align vertically

* changed width so elements space the same
* center justified links so they are centered
* README.md slightly modified

--- a/styles.css
+++ b/styles.css
@@ -1,61 +1,72 @@
 body {
-    margin: 0px;
-    height: 100vh;
-    font-family:'Courier New', Courier, monospace;
-    display: flex;
-    flex-direction: column;
+  margin: 0px;
+  height: 100vh;
+  font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 li {
-    list-style: none;
+  list-style: none;
+  font-size: 18px;
 }
 
 .header {
-    background-color: #1F2937;
-    height: 50px;
-    color: white;
-    padding: 15px;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+  background-color: #1f2937;
+  height: 50px;
+  color: white;
+  padding: 15px 0px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 .links {
-    display: flex;
-    gap: 45px;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  width: 300px;
+  padding: 0px;
 }
 
 .logo {
-    font-weight: 900;
+  font-size: 24px;
+  width: 300px
 }
 
 img {
-    margin-top: 30px 0px;
-    flex-shrink: 0;
-}
-
-.section-2 {
-    background-color: #1F2937;
-    color: white;
-    height: 300px;
+  margin-top: 30px 0px;
+  flex-shrink: 0;
+  width: 300px;
 }
 
 .section-2-content {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+  background-color: #1f2937;
+  color: white;
+  height: 250px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.section-2-content-text {
+  width: 300px;
 }
 
 .header-text {
-    margin: 0px;
-    font-size: 42px;
-    font-weight: 900;
+  margin: 0px;
+  font-size: 42px;
+  font-weight: 900;
+}
+
+.header-para {
+  font-size: 18px;
 }
 
 button {
-    padding: 10px 30px;
-    background-color: #3882F6;
-    color: white;
-    border: none;
-    border-radius: 5px;
+  padding: 10px 30px;
+  background-color: #3882f6;
+  color: white;
+  border: none;
+  border-radius: 5px;
 }
